[package]
name = "try-tokio-tls"
version = "0.1.0"
authors = ["Yota Ichino <www.irda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.4"
tokio-tls="0.3.0"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.10.1"
